fix: collapse

--- a/packages/ui/collapse/src/index.less
+++ b/packages/ui/collapse/src/index.less
@@ -32,7 +32,7 @@
                 top: auto;
                 width: 16px;
                 height: 16px;
-                color: var(--theme-text-color);
+                color: var(--collapse-expand-icon-color);
                 background: var(--collapse-expand-icon-bg);
                 border-radius: 50%;
 
